# gazebo_playground

./: CMakeLists.txt  README.md  package.xml
gazebo/models/d435/: d435.sdf
gazebo/models/iris_modified/: iris_modified.sdf
gazebo/models/refinery/: inspection_world.urdf.gazebo
gazebo/worlds/: clustered_actors.world  long_wall.world  test1_moreactor.world
launch/: dyn_sim.sh  gazebo_sim.launch  gazebo_sim_dyn.launch  gazebo_sim_inspec.launch  gazebo_sim_sta.launch  gt_sim_indoor.launch  imu_boost.sh  inspec_sim.sh  planning_demo.rviz  px4.launch  sim.sh  spawn_inspection_world.launch  sta_sim.sh
launch_px4_hzi/: gazebo_sim1.launch  gt_sim_hzi.launch  sim1.sh  spawn.launch
